fix character limits
